# python-sample

./: README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: ci_check.yaml
utils/: math_utils.py  math_utils_test.py
